# CISC455-RandomNumberGenerator

./: .gitignore  CA_class.py  CA_draw.ipynb  CA_grid.py  Grid-Storage.xlsx  RNGchanges.ipynb  ReadMe.md  concurrent.ipynb  diehard_test.py  evaluation.py  initialization.py  main.py  readme.md  run_EA.ipynb
CAPRNG/: CMakeLists.txt  ReadMe.md  main.cpp  makeCA.cpp  makeCA.h
modified_nist/: ReadMe.md  assess  makefile  output1.txt  output3.txt
modified_nist/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
modified_nist/experiments/AlgorithmTesting/ApproximateEntropy/: results.txt
modified_nist/experiments/AlgorithmTesting/BlockFrequency/: results.txt  stats.txt
modified_nist/experiments/AlgorithmTesting/CumulativeSums/: results.txt  stats.txt
modified_nist/experiments/AlgorithmTesting/FFT/: results.txt
modified_nist/hel1/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
modified_nist/include/: utilities.h
modified_nist/output1/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
modified_nist/src/: approximateEntropy.c  assess.c  blockFrequency.c  cusum.c  discreteFourierTransform.c  frequency.c  linearComplexity.c  longestRunOfOnes.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  serial.c  universal.c  utilities.c
sts-2.1.2/: assess  hel1.txt  makefile
sts-2.1.2/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
sts-2.1.2/src/: assess.c  utilities.c
utilities/: RdmNumberGen.ipynb  ReadMe.md  see_CA.py
(+346 files in other folders)
